--- a/P1.ipynb
+++ b/P1.ipynb
@@ -689,6 +689,7 @@
     "> Concerns : There are several concerns that emerge immediately:\n",
     "1. Due to the very nature of the implemented algorithm it is restricted to _lines_, i.e. in any situation when car enters the curve the algorithm will fail\n",
     "2. Method is also very sensitive to the lightning and/or weather conditions. For example if there will be a sharp shadow on the road and the direction of the border between lit part of the road and the shadowed one will be in the acceptable range for slope detection such a transition between light and shadow will be most probably detected as a line\n",
+    "3. Another important consideration is that current approach assumes that the camera position is static and that the amount of noise is rather low\n",
     "\n",
     "> Algorithm description:\n",
     "Main steps are the following:\n",
@@ -707,7 +708,10 @@
     "8. Draw approximated continuous lines\n",
     "\n",
     "> Potential modifications:\n",
-    "1. Thee easiest thing to do would be to introduce a short term memory of the calculated slope and intercept between frames. In other words, to compute the averaged coefficients not only based on the segments detected in the current frame but also average across previous frames with degenerating coefficients.\n",
+    "1. Thee easiest thing to do would be to introduce a short term memory of the calculated slope and intercept between frames. In other words, to compute the averaged coefficients not only based on the segments detected in the current frame but also average across previous frames with degenerating coefficients. This can be done in a following way:\n",
+    "    1. Introduce global bounded queue that will store previous N calculated coefficients\n",
+    "    2. Calculate current coeffients as an averaged value of the coefficients obtained for this frame and N previous ones\n",
+    "    3. Push coefficients from the latest frame to the queue \n",
     "2. Instead of fitting a line, fit a curve (for example a polynomial curve of 2 order), this would potentially remove the issues with smooth terms, but would not remove issues with road intersections.\n"
    ]
   },
